--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Lobster", cursive;
+  font-family: 'Itim', cursive;
 }
 
 
@@ -24,7 +24,7 @@ body {
 
 h1 {
   font-size: 100px;
-  font-family: 'Courgette', cursive;
+  font-family: 'Courgette', sans-serif;
 
 }
 
@@ -34,8 +34,21 @@ h1 {
 }
 
 .navLink {
-  margin: 85px;
-  font-size: large;
+  position: aboslute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 50px 60px 0 60px;
+  font-size: x-large;
+}
+
+
+.navPic1 {
+  left: 0;
 }
 
 h2, p {
@@ -112,9 +125,16 @@ h2, p {
   background-size: 690px;
 }
 
-.navPic {
+.navPic2 {
   background-image: url("logo.png");
   background-size: 70px;
   height: 70px;
   width: 70px;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.fa-shopping-cart {
+  cursor: pointer;
+  text-decoration: none;
 }
