--- a/src/App.css
+++ b/src/App.css
@@ -138,3 +138,42 @@ h2, p {
   cursor: pointer;
   text-decoration: none;
 }
+
+.TicketJumbo {
+  margin: 0;
+}
+
+.TicketContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 0px;
+  padding-bottom: 100px;
+}
+
+.TicketCard {
+  margin: 50px;
+  padding: 40px;
+  background-color: salmon;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.addToCart {
+  width:100%;
+  background-color: rgb(210, 212, 54);
+  transition: all 0.1s ease-in;
+  opacity: 0;
+  cursor: pointer;
+  text-align: center;
+}
+
+.cart1,
+.cart2 {
+  bottom: 0px;
+  opacity: 1;
+  padding: 5px;
+  text-decoration: none;
+  text-align: center;
+}
